# AI_ZY_V1.00

./: README.md
python-ai-app/: Dockerfile  README.md  pyproject.toml  requirements.txt
python-ai-app/notebooks/: exploration.ipynb
python-ai-app/src/: main.py
python-ai-app/src/api/: server.py
python-ai-app/src/data/: dataset.py
python-ai-app/src/models/: model.py
python-ai-app/src/pipelines/: train.py
python-ai-app/src/utils/: helpers.py
python-ai-app/tests/: test_main.py
